[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Tamil Sign Language Recognition Web App"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "opencv-python-headless>=4.5.0.0",
    "pillow>=8.0.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0",
    "streamlit>=1.28.0",
]
